(2022/01/06)ピアソンの積率相関係数の分子について，解釈を訂正

--- a/Pearson.ipynb
+++ b/Pearson.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "ここで$(x_i-\\bar{x})$と$(y_i-\\bar{y})$の部分に注目する．それぞれのデータ点において標本平均を引いているので，これは中心化が行われている．つまり，平均をとるとゼロになるように値を補正していることになる．一言でいえば偏差を計算している．値の平均(中心)からプラスかマイナスか，どれだけずれているかをデータ点ごとに求めていることになる．\n",
     "\n",
-    "ここで，仮にxとyの間に正の相関があるとする．つまりピアソンの積率相関係数は0より大きい値をとる．このとき，変数xが大きくなるということは，言い換えると変数xの偏差がマイナスからゼロを通過してプラスへ移行していく．変数yについても同様のことが言えるため，標本共分散の総和に用いられている各項は以下のいずれかの計算になるはずである：\n",
+    "ここで，仮にxとyの間に正の相関があるとする．つまりピアソンの積率相関係数は0より大きい値をとる．このとき，変数xが大きくなるということは，言い換えると変数xの偏差がマイナスからゼロを通過してプラスへ移行していく．変数yについても同様のことが言えるため，標本共分散の総和に用いられている各項は以下のいずれかの計算になるはずである：(※訂正※雰囲気としてはそんな感じだが，厳密ではないな...「全ての項の」正負が揃うわけではない)\n",
     "- (xの偏差：負の値)×(yの偏差：負の値)>0\n",
     "- (xの偏差：正の値)×(yの偏差：正の値)>0\n",
     "\n",
@@ -102,7 +102,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f980522c280>"
+       "<matplotlib.collections.PathCollection at 0x7fed1114f220>"
       ]
      },
      "execution_count": 1,
