(2022/01/08)偏差値，変動係数，四分位数，パーセンタイルについて調べた

--- a/VarStdQuaPer.ipynb
+++ b/VarStdQuaPer.ipynb
@@ -5,7 +5,7 @@
    "id": "7b4097f9",
    "metadata": {},
    "source": [
-    "# 分散，標準偏差，四分位，パーセンタイルについて理解する(2022/01/07)\n",
+    "# 分散，標準偏差，四分位，パーセンタイルについて理解する(2022/01/07-2022/01/08)\n",
     "---\n",
     "## 概要\n",
     "---\n",
@@ -65,7 +65,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fb1d75edfd0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f4ed01cc0a0>"
       ]
      },
      "execution_count": 1,
@@ -149,7 +149,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7fb18815efa0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7f4ed0208310>"
       ]
      },
      "execution_count": 4,
@@ -234,11 +234,87 @@
     "また，データの値が正規分布に従う場合，標準偏差(とその倍数)は特別な意味を持つ．例えば，平均0の正規分布において確率変数の値が$0\\pm\\sigma$の範囲に収まる確率は68.2%であり，$0\\pm2\\sigma$の範囲に収まる確率は95.4%である．\n",
     "\n",
     "### 不偏標準偏差\n",
-    "不偏標準偏差は不偏分散の平方根である．ただ，どの統計量を不偏標準偏差とみなすか，人によって主張が異なる．というのも，冒頭の定義では母標準偏差の不偏推定量になっていないからである．母分散の不偏推定量である不偏分散の平方根を取ったからといって，それが母標準偏差の不偏推定量になるわけではない．母標準偏差の不偏推定量を不偏標準偏差と呼ぶ場合もある．\n",
+    "不偏標準偏差は不偏分散の平方根である．ただ，どの統計量を不偏標準偏差とみなすか，人によって主張が異なる．\n",
+    "\n",
+    "というのも，冒頭の定義では母標準偏差の不偏推定量になっていないからである．母分散の不偏推定量である不偏分散の平方根を取ったからといって，それが母標準偏差の不偏推定量になるわけではない．母標準偏差の不偏推定量を不偏標準偏差と呼ぶ場合もある．\n",
     "\n",
     "### 偏差値\n",
+    "学生のうちによく目にする偏差値は，この標準偏差をもとに計算される量である．あるテストの得点を$x$，得点の標本平均を$\\bar{x}$，標本標準偏差を$s_x$とするとき，偏差値は以下のように算出される：\n",
+    "\n",
+    "$$\n",
+    "(偏差値) = 50 + 10 * \\frac{x - \\bar{x}}{s_x}\n",
+    "$$\n",
+    "\n",
+    "この式を見ると分かるように，ちょうど真ん中の得点だと意識している偏差値50は，定数として加えられているいわば「下駄」である．\n",
+    "\n",
+    "そして，得点が標本平均からどれだけズレているかという偏差を計算し，それを標本標準偏差で割っている．これに係数10が掛け合わさったものを足して，偏差値としている．\n",
+    "\n",
+    "分数の項$\\frac{x - \\bar{x}}{s_x}$はいわば，偏差の標準化を行っている．言い換えると，「得点の平均値からのズレ(偏差)が，標準偏差何個分に相当するか」を計算していることになる．これに10を掛けているのだから，偏差値50を中心として値が10増減すると，それは平均点から$\\pm{s_x}$だけ得点がずれていることを意味する．\n",
+    "\n",
+    "なお，先述の正規分布における標準偏差の性質から「偏差値70は上位約2%」という記述を目にする．筆者はこの表現について疑問を持っている．というのも，得点の分布が正規分布に必ず従うというわけではないからだ．極端な例を言えば，得点のピークが2つあるような二峰性の分布が観測されれば，とても先述の記述は正しいとは言えまい．\n",
+    "\n",
     "### 変動係数\n",
+    "データのバラツキを表現するために算出される標準偏差(あるいは分散)であるが，少々欠点というものも存在する．スケールが同じであっても平均値が大きく異なる場合，平均値の大きい母集団の方が標準偏差も大きくなる傾向がある点である．\n",
+    "\n",
+    "例えば，身体的な成長が著しい小学生の身長と，既に身長の変化が少ないと考えられる大学生の身長とで標準偏差を比較することを考える．当然，平均身長は大学生の方が高いわけだから，標準偏差も大きい値が出る傾向にある．しかし，身長の伸びが著しいのは小学生だと考えられ，そのぶんバラツキも大きくなるはずだからこの結果は実態に即さない．\n",
+    "\n",
+    "そこで用いられるのが変動係数である．変動係数は標準偏差を平均値で割ることによって求められる値である．こうすることで，母集団の値の大きさにとらわれずバラツキを考えることができるようになる．\n",
+    "\n",
     "### Numpyを用いたシミュレーション"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2b14753b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "biased standard deviation: 9.541168523228404\n",
+      "unbiased standard deviation: 9.54594268841244\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 分散で用いたものと同じデータセットを用いる\n",
+    "\n",
+    "# 母集団の標準偏差10でガウス分布から乱数生成\n",
+    "datasets  = np.random.normal(50, 10, (1000))\n",
+    "\n",
+    "# 標本標準偏差\n",
+    "print('biased standard deviation:', np.std(datasets))\n",
+    "\n",
+    "# 不偏標準偏差(母集団の標準偏差の不偏推定量ではない!!)\n",
+    "print('unbiased standard deviation:', np.std(datasets, ddof=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ba463e93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "biased standard deviation: 101.58130965316904\n",
+      "unbiased standard deviation: 101.6321384327587\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 母集団の標準偏差を変えてみる\n",
+    "datasets  = np.random.normal(50, 100, (1000))\n",
+    "\n",
+    "# 標本標準偏差\n",
+    "print('biased standard deviation:', np.std(datasets))\n",
+    "\n",
+    "# 不偏標準偏差(母集団の標準偏差の不偏推定量ではない!!)\n",
+    "print('unbiased standard deviation:', np.std(datasets, ddof=1))"
    ]
   },
   {
@@ -248,8 +324,121 @@
    "source": [
     "## 四分位\n",
     "---\n",
+    "四分位は四分位数とも呼ばれ，その名の通りデータを小さい順に並べて，4等分した際の境目の値のことである．データがどの程度ばらついているか，偏っているかを把握できる指標である．4等分なので，四分位数は$Q_1, Q_2, Q_3$と3種類あり，$Q_1$を第一四分位数，$Q_2$を第二四分位数，$Q_3$を第三四分位数という．とりわけ第二四分位数$Q_2$は中央値(median)とも呼ばれる．\n",
+    "\n",
+    "具体的な四分位数の算出方法だが，いくつかの流儀が存在する．ただし，あくまでデータの構造を把握するための値なので，流儀の差異に伴う値の若干の差異はあまり問題ではない．ここでは例として，以下のような9つの単純なデータ列を考える：\n",
+    "\n",
+    "$$\n",
+    "1,2,3,4,5,6,7,8,9\n",
+    "$$\n",
+    "\n",
+    "まず，第二四分位数(中央値)である$Q_2$を求める．順に数えて，ちょうど真ん中に位置する数値が中央値なので，この場合は5が相当する．なお，データの個数が偶数個だった場合は，中央の隣り合う2つの値の平均をとる．\n",
+    "\n",
+    "そして，ここから2つの方法が存在する．データ点の個数がこの例のように奇数個の場合に差が発生する．\n",
+    "### $Q_1, Q_3$の計算に$Q_2$を用いる場合\n",
+    "この方法では第二四分位数を「含めて」データを2つに分ける．すなわち\n",
+    "$$\n",
+    "1,2,3,4,5\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "5,6,7,8,9\n",
+    "$$\n",
+    "に分ける．\n",
+    "\n",
+    "そして，それぞれの集合でさらに中央値を算出し，それぞれを$Q_1(=3), Q_3(=7)$とする手法である．言い換えれば，「分位数」とあるとおりに，データ全体を1:3あるいは3:1に分割する値を直接求めていることに等しい．後述の25パーセンタイル，75パーセンタイルを求めている．\n",
+    "\n",
+    "### $Q_1, Q_3$の計算に$Q_2$を用いない場合\n",
+    "この方法では第二四分位数を「含めずに」データを2つに分ける．すなわち\n",
+    "\n",
+    "$$\n",
+    "1,2,3,4\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "6,7,8,9\n",
+    "$$\n",
+    "に分ける．\n",
+    "\n",
+    "そして，それぞれの集合でさらに中央値を算出し，それぞれを$Q_1(=2.5), Q_3(=7.5)$とする手法である．前者の方法のように「1:3」といった比を考える必要がないので，より簡便な方法と言えるかもしれない．学校ではこのような教え方をしているとか，いないとか．\n",
+    "\n",
+    "この他にも外れ値をあらかじめ除外してから四分位数を計算する方法など，様々な手法がある．重ね重ね言うが，いずれの計算方法でもデータの構造を把握するという目的を考えれば大した差ではない．ペーパーテストでは過敏になるかもしれないが，実問題を考える際にはあまり気にすることではない．\n",
+    "\n",
+    "### 四分位範囲\n",
+    "四分位範囲はデータのバラツキを把握する指標である．以下のように，四分位数の差によって求められる：\n",
+    "\n",
+    "$$\n",
+    "Q_3 - Q_1\n",
+    "$$\n",
+    "\n",
+    "値が大きいほど，データは幅広い値をとっているので，ばらついているということになる．特徴として，最大値と最小値を含んだデータのいわば「端っこ」の部分を除いているため，外れ値があっても比較的値が安定しているという特徴もある．\n",
+    "\n",
+    "また，四分位範囲を2で割った四分位偏差というものもある．これは中央値からのズレをより強調したものになっている．\n",
+    "\n",
+    "### Numpyを用いたシミュレーション"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9f3d16fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1: 3.0\n",
+      "Q2: 5.0\n",
+      "Q3: 7.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# データは先述の例と同じものを用いる\n",
+    "datasets = np.array([1,2,3,4,5,6,7,8,9])\n",
+    "\n",
+    "print('Q1:', np.quantile(datasets, 0.25))\n",
+    "print('Q2:', np.quantile(datasets, 0.5))\n",
+    "print('Q3:', np.quantile(datasets, 0.75))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3f8ba87",
+   "metadata": {},
+   "source": [
     "## パーセンタイル\n",
-    "---"
+    "---\n",
+    "パーセンタイルは四分位数の一般化とも呼べるものである．データを小さい順に並べ，上位$x\\%$に位置する値を$x$パーセンタイルという．つまり四分位数との関連は，$Q_1$が25パーセンタイル，$Q_2$が50パーセンタイル，$Q_3$が75パーセンタイルに等しいということにある．\n",
+    "\n",
+    "### Numpyを用いたシミュレーション"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ac0791d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25 percentile: 3.0\n",
+      "50 percentile: 5.0\n",
+      "75 percentile: 7.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# データは先述の例と同じものを用いる\n",
+    "datasets = np.array([1,2,3,4,5,6,7,8,9])\n",
+    "\n",
+    "# np.quatile関数と異なる点は，第二引数の桁のみ(0-100で指定する)\n",
+    "print('25 percentile:', np.percentile(datasets, 25))\n",
+    "print('50 percentile:', np.percentile(datasets, 50))\n",
+    "print('75 percentile:', np.percentile(datasets, 75))"
    ]
   },
   {
@@ -278,7 +467,27 @@
     "\n",
     "[標準偏差, Wikipedia](https://ja.wikipedia.org/wiki/%E6%A8%99%E6%BA%96%E5%81%8F%E5%B7%AE)\n",
     "\n",
-    "[標準偏差とは？意味から求め方、分散との違いまでわかりやすく解説, DATA VIZ LAB](https://data-viz-lab.com/standarddeviation)"
+    "[標準偏差とは？意味から求め方、分散との違いまでわかりやすく解説, DATA VIZ LAB](https://data-viz-lab.com/standarddeviation)\n",
+    "\n",
+    "[平均と標準偏差、変動係数, 統計用語(PDF資料)](https://www.pref.toyama.jp/sections/1015/ecm/back/2009apr/tokushu/_img/1-03.pdf)\n",
+    "\n",
+    "[numpy.std, Numpy](https://numpy.org/doc/stable/reference/generated/numpy.std.html)\n",
+    "\n",
+    "[四分位数の定義](https://oku.edu.mie-u.ac.jp/~okumura/stat/quartile.html)\n",
+    "\n",
+    "[4-2.四分位数を見てみよう, 統計WEB](https://bellcurve.jp/statistics/course/19277.html)\n",
+    "\n",
+    "[四分位範囲とは？四分位偏差との違いまで分かりやすく解説！, DATA VIZ LAB](https://data-viz-lab.com/iqr)\n",
+    "\n",
+    "[統計学習の指導のために　基本用語集(し), 統計局](https://www.stat.go.jp/teacher/glossary-sa-si.html)\n",
+    "\n",
+    "[四分位数の違いについて～みんなちがってみんないい～, WAKARA](https://wakara.co.jp/mathlog/20210927)\n",
+    "\n",
+    "[numpy.quantile, Numpy](https://numpy.org/doc/stable/reference/generated/numpy.quantile.html)\n",
+    "\n",
+    "[パーセンタイル，統計WEB](https://bellcurve.jp/statistics/glossary/1388.html)\n",
+    "\n",
+    "[numpy.percentile, Numpy](https://numpy.org/doc/stable/reference/generated/numpy.percentile.html)"
    ]
   },
   {
