不等号がエンコードされていなかったので，修正

--- a/SpearmanPearson.ipynb
+++ b/SpearmanPearson.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "$s_{xy}$は標本共分散であり，$s_x$と$s_y$はそれぞれ標本標準偏差である．また，$\\bar{x}$と$\\bar{y}$はそれぞれ標本平均である．\n",
     "\n",
-    "ピアソンの積率相関係数は$-1\\leq r\\leq 1\\$の値を取る．1あるいは-1に近い場合は「強い相関」があるとし，0に近い場合は「相関なし」と判断する．順序尺度なので，ピアソンの積率相関係数を比較する際は，「どちらの方が相関が強いか」という観点でしか比較ができない点に注意する．「0.3だけ相関が強い」や「2倍の相関がある」といった表現はできない．\n",
+    "ピアソンの積率相関係数は$-1\\leq r \\leq 1\\$の値を取る．1あるいは-1に近い場合は「強い相関」があるとし，0に近い場合は「相関なし」と判断する．順序尺度なので，ピアソンの積率相関係数を比較する際は，「どちらの方が相関が強いか」という観点でしか比較ができない点に注意する．「0.3だけ相関が強い」や「2倍の相関がある」といった表現はできない．\n",
     "\n",
     "$r=1$のとき，$D$のデータ点は全て$y=x$上にある．また，$r=-1$のとき，$D$のデータ点は全て$y=-x$上にある．つまり，ピアソンの積率相関係数は強い相関の条件に線形性を求めている．\n",
     "\n",
@@ -91,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f7e87b90c70>"
+       "<matplotlib.collections.PathCollection at 0x7f1759d5dd00>"
       ]
      },
      "execution_count": 1,
@@ -165,7 +165,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f7e85a8f1f0>"
+       "<matplotlib.collections.PathCollection at 0x7f1757c0ea90>"
       ]
      },
      "execution_count": 3,
@@ -241,7 +241,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7f7e83b4de80>"
+       "<matplotlib.collections.PathCollection at 0x7f1755d5dfa0>"
       ]
      },
      "execution_count": 5,
