(2022/01/19)主成分分析について理解する(固有値問題導出の途中)

--- a/eigenValueVector.ipynb
+++ b/eigenValueVector.ipynb
@@ -86,7 +86,48 @@
    "source": [
     "## 主成分分析\n",
     "---\n",
-    "固有値・固有ベクトルの応用先として，データサイエンスでは主成分分析が挙げられる．主成分分析を用いることで，データ点の次元数を削減する「要約」のような操作が可能になる．"
+    "固有値・固有ベクトルの応用先として，データサイエンスでは主成分分析が挙げられる．分散が大きくなるようにデータを見れば，たくさんの情報が得られるはずだという考え方に基づく分析手法である．\n",
+    "\n",
+    "これはデータの分散共分散行列に対して固有値・固有ベクトルを求めることによって実現される．分散(固有値)が最も大きくなる軸(固有ベクトル)からデータを捉えなおすことで，データ点を特徴づける要素が何か，分析しやすくなる．\n",
+    "\n",
+    "また，主成分分析の効果として次元削減が挙げられる．データ点の次元を減らすことで，機械学習時の過学習の抑制や，2次元・3次元での可視化といったメリットが得られる．\n",
+    "\n",
+    "注意点として，主成分分析は特徴量のスケールの大きさの影響を強く受ける点が挙げられる．「分散が最も大きくなる方向に新たな軸を考える」という操作なので，各次元のスケールが大きく異なっている場合には一部の特徴量の影響を強く反映する場合がある．例えば，あるデータが「0から100」のオーダーをもつ特徴量と，「-1000~1000」のオーダーを持つ特徴量からなる場合，「-1000から1000」を取りうる値の分散が大きくなり，主成分分析にも大きな影響を与える．\n",
+    "\n",
+    "以上の注意点から，主成分分析を行う際はあらかじめデータを標準化(平均0，分散1に補正する)しておくか，相関行列から固有値・固有ベクトルを求めるほうが良い．\n",
+    "\n",
+    "### 主成分分析と固有値問題のつながり\n",
+    "ここでは，あるデータ点を線形変換する操作について，分散を最大化する目的に沿うと分散共分散行列の固有値問題に帰着できることを簡易に説明する．\n",
+    "\n",
+    "ここでは$n$個のデータからなる2次元のデータセット$D=\\{(x_1, y_1),(x_2, y_2),...,(x_i, y_i),...,(x_n, y_n)\\}$があるとして，これを主成分分析することを考える．\n",
+    "\n",
+    "まず，データ点を別の点zへ線形変換する．これは：\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "z_i = \\alpha x_i + \\beta y_i\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "と表現できる．$\\alpha, \\beta$はそれぞれ定数である．\n",
+    "\n",
+    "このとき，変換先の$z$座標について，データ$D$の分散$s_z^2$を考えると：\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "s_z^2 &=& \\frac{1}{n}\\sum^{n}_{i=1}(z_i - \\bar{z})^2 \\\\\n",
+    "&=& \\frac{1}{n}\\sum^{n}_{i=1}[(\\alpha x_i + \\beta y_i) - (\\alpha\\bar{x} + \\beta\\bar{y})]^2 \\\\\n",
+    "&=& \\frac{1}{n}\\sum^{n}_{i=1}[\\alpha(x_i - \\bar{x}) + \\beta(y_i - \\bar{y})]^2 \\\\\n",
+    "&=& \\frac{1}{n}\\sum^{n}_{i=1}[\\alpha^2(x_i - \\bar{x})^2 +\\alpha\\beta(x_i - \\bar{x})(y_i - \\bar{y}) + \\beta^2(y_i - \\bar{y})^2] \\\\\n",
+    "&=& \\alpha^2 \\times \\frac{1}{n}\\sum^{n}_{i=1}(x_i - \\bar{x})^2 + \\alpha\\beta \\times \\frac{1}{n}\\sum^{n}_{i=1}(x_i - \\bar{x})(y_i - \\bar{y}) + \\beta^2 \\times \\frac{1}{n}\\sum^{n}_{i=1}(y_i - \\bar{y})^2 \\\\\n",
+    "&=& \\alpha^2s_x^2 + \\alpha\\beta s_{xy} + \\beta^2s_y^2\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "となる．ここで，$s_x^2$は変数$x$の分散，$s_y^2$は変数$y$の分散，$s_{xy}$は変数$x, y$の共分散である．\n",
+    "\n",
+    "分散$s_z$を最大化するために，ラグランジュの未定乗数法を用いる．\n",
+    "\n",
+    "制約として，\n",
+    "\n",
+    "### 寄与率\n",
+    "### Pythonを用いたシミュレーション"
    ]
   },
   {
@@ -123,7 +164,15 @@
     "\n",
     "[主成分分析とは？因子分析との違いや事例を初心者にも分かりやすく解説，GMO RESERCH](https://gmo-research.jp/research-column/principal-component-analysis)\n",
     "\n",
-    "[主成分分析の考え方，Logistics of Blue](https://logics-of-blue.com/principal-components-analysis/)"
+    "[主成分分析の考え方，Logistics of Blue](https://logics-of-blue.com/principal-components-analysis/)\n",
+    "\n",
+    "[分散共分散行列の定義と性質，高校数学の美しい物語](https://manabitimes.jp/math/1020)\n",
+    "\n",
+    "[相関行列の定義と分散共分散行列との関係，高校数学の美しい物語](https://manabitimes.jp/math/1294)\n",
+    "\n",
+    "[座標平面上における回転の公式，具体例で学ぶ数学](https://mathwords.net/heimenkaiten)\n",
+    "\n",
+    "[行列と一次変換](https://www.geisya.or.jp/~mwm48961/linear_algebra/transform1.htm)"
    ]
   }
  ],
