--- a/TimeSeriesData.ipynb
+++ b/TimeSeriesData.ipynb
@@ -9,10 +9,157 @@
     "---\n",
     "## 概要\n",
     "---\n",
-    "データの形式の一つである時系列データについて，その特性・分析手法(トレンド，周期性，移動平均，季節調整，ノイズ，階差，スペクトル，自己相関，相互相関，自己回帰モデル)について調べる．\n",
+    "データの形式の一つである時系列データについて，その特性・分析手法(トレンド，周期性，ノイズ，移動平均，季節調整，階差，スペクトル，自己相関，相互相関，自己回帰モデル)について調べる．\n",
     "\n",
     "## 時系列データ\n",
-    "---\n"
+    "---\n",
+    "時系列データとは，時間の経過とともに変化する量を等間隔で記録したデータのことである．例えば，毎日測定する体重の推移であるとか，株価，商品の売り上げ，気温，そして今回例として使用するGDPの推移に至るまで，時系列データは様々な事象から得られるものである．\n",
+    "\n",
+    "時系列データはその性質ゆえ，グラフにプロットされる際は横軸が時間軸，そして縦軸が当該データの特徴量になることが多い．時間軸のスケールは扱うデータの性質によってさまざまで，一秒おきに得られるデータもあれば，数年おきに得られるデータもある．\n",
+    "\n",
+    "このnotebookでは四半期ごとに収集されていた日本国の実質GDPを例として，時系列データに対する分析の切り口を学ぶ．\n",
+    "\n",
+    "早速，内閣府が公表している実質GDPのデータをpandas DataFrameに読み込んでいく．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "971f8e17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GDP</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>y/m</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1994/ 1- 3.</th>\n",
+       "      <td>109110.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4- 6.</th>\n",
+       "      <td>107756.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7- 9.</th>\n",
+       "      <td>112077.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-12.</th>\n",
+       "      <td>117578.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1995/ 1- 3.</th>\n",
+       "      <td>110520.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7- 9.</th>\n",
+       "      <td>130613.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-12.</th>\n",
+       "      <td>138078.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021/ 1- 3.</th>\n",
+       "      <td>135013.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4- 6.</th>\n",
+       "      <td>130811.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7- 9.</th>\n",
+       "      <td>132189.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>111 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  GDP\n",
+       "y/m                  \n",
+       "1994/ 1- 3.  109110.2\n",
+       "4- 6.        107756.4\n",
+       "7- 9.        112077.0\n",
+       "10-12.       117578.7\n",
+       "1995/ 1- 3.  110520.9\n",
+       "...               ...\n",
+       "7- 9.        130613.2\n",
+       "10-12.       138078.0\n",
+       "2021/ 1- 3.  135013.1\n",
+       "4- 6.        130811.5\n",
+       "7- 9.        132189.6\n",
+       "\n",
+       "[111 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "gdp_jp = pd.read_excel('gdp_jp_2021.xlsx',\n",
+    "                       header=None,\n",
+    "                       skiprows=7,\n",
+    "                       names=['y/m', 'GDP'],\n",
+    "                       index_col=[0],\n",
+    "                       usecols=[0, 1])\n",
+    "gdp_jp.dropna(inplace=True)\n",
+    "gdp_jp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "606814da",
+   "metadata": {},
+   "source": [
+    "### トレンド\n",
+    "### 周期性\n",
+    "### ノイズ\n",
+    "\n",
+    "## 時系列データの分析\n",
+    "---\n",
+    "### 移動平均\n",
+    "### 季節調整\n",
+    "### 階差\n",
+    "### スペクトル\n",
+    "### 自己相関\n",
+    "### 相互相関\n",
+    "### 自己回帰モデル"
    ]
   },
   {
@@ -34,8 +181,22 @@
     "\n",
     "[【テックコラム】時系列データの基礎と可視化，DataCurrent](https://www.datacurrent.co.jp/column/time-series-visualization20210628/)\n",
     "\n",
-    "[時系列相関，株式会社アイスタット](https://istat.co.jp/ji_commentary/time_series)"
+    "[時系列相関，株式会社アイスタット](https://istat.co.jp/ji_commentary/time_series)\n",
+    "\n",
+    "[統計表一覧(2021年 7-9月期 2次速報値)，内閣府](https://www.esri.cao.go.jp/jp/sna/data/data_list/sokuhou/files/2021/qe213_2/gdemenuja.html)\n",
+    "\n",
+    "[pandas.read_excel，pandas 1.4.0 documentation](https://pandas.pydata.org/docs/reference/api/pandas.read_excel.html)\n",
+    "\n",
+    "[pandas.DataFrame.dropna，pandas 1.4.0 documentation](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.dropna.html)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47b83069",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
