--- a/TimeSeriesData.ipynb
+++ b/TimeSeriesData.ipynb
@@ -151,7 +151,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd7ac88cd00>]"
+       "[<matplotlib.lines.Line2D at 0x7f49d1f5dd00>]"
       ]
      },
      "execution_count": 2,
@@ -596,7 +596,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd7aa318040>]"
+       "[<matplotlib.lines.Line2D at 0x7f49cfa5e790>]"
       ]
      },
      "execution_count": 10,
@@ -1123,7 +1123,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fd7aa124700>]"
+       "[<matplotlib.lines.Line2D at 0x7f49cf7edac0>]"
       ]
      },
      "execution_count": 15,
@@ -1172,7 +1172,18 @@
    "id": "44629a42",
    "metadata": {},
    "source": [
-    "### 自己回帰モデル"
+    "### 自己回帰モデル\n",
+    "自己回帰モデルはその名の通り，既に手元にある時系列データを利用して将来の推移を予測する回帰モデルのことである．言い換えると，過去のデータをもとにして未来のデータを予測するモデルを構築するということになる．\n",
+    "\n",
+    "具体的には，ある時刻$t$までのデータを用いて，未だ観測できない未来の時刻$t+1$のデータを予測することを考えるとき，その値は以下のように表される：\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "x_{t+1} = a_1x_t + a_2x_{t-1} + ... + a_kx_{t+1-k} + v\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "$\\{a_1,...,a_k\\}$は定数であり，このモデルの予測精度に関わるパラメータである．このパラメータを推定する方法はいくつかあるが，また別の機会に自己回帰モデルの派生形も含めて扱おうと思う．なお，係数パラメータの数$k$を増やすほど過去の情報をモデルが利用することになり，一般的に精度は向上する．\n",
+    "\n",
+    "また，$v$は予測誤差と呼ばれるノイズ項であり，$v \\sim N(0, \\sigma^2)$と仮定する．"
    ]
   },
   {
