(2022/02/03)単回帰モデルの標準誤差について調べた

--- a/RegressionAnalysis.ipynb
+++ b/RegressionAnalysis.ipynb
@@ -95,7 +95,7 @@
     "\\begin{eqnarray}\n",
     "\\alpha &=& \\frac{\\sum_{i=1}^{n}X_iY_i}{\\sum_{i=1}^{n}X_i^2} \\\\\\\\\n",
     "&=& \\frac{\\sum(x_i-\\bar{x})(y_i-\\bar{y})}{\\sum(x_i-\\bar{x})^2} \\\\\\\\\n",
-    "&=& \\frac{s_{xy}}{s_x}\n",
+    "&=& \\frac{s_{xy}}{{s_x}^2}\n",
     "\\end{eqnarray}"
    ]
   },
@@ -134,7 +134,7 @@
     "\\begin{eqnarray}\n",
     "\\beta &=& -\\alpha\\bar{x} + \\bar{y}\\\\\\\\\n",
     "&=& \\bar{y}-\\alpha\\bar{x} \\\\\\\\\n",
-    "&=& \\bar{y}-\\frac{s_{xy}}{s_x}\\bar{x}\n",
+    "&=& \\bar{y}-\\frac{s_{xy}}{{s_x}^2}\\bar{x}\n",
     "\\end{eqnarray}\n",
     "\n",
     "となる．よってパラメータ$\\beta$も導出できた．"
@@ -153,7 +153,7 @@
     "決定係数は，単回帰分析において用いる二変量の相関係数の二乗で表される値である．つまり，データ$D=\\{(x_1,y_1),...,(x_n,y_n)\\}$があるとして，\n",
     "\n",
     "\\begin{eqnarray}\n",
-    "R^2 &=& \\left(\\frac{s_xy}{s_xs_y}\\right)^2 \\\\\n",
+    "R^2 &=& \\left(\\frac{s_{xy}}{s_xs_y}\\right)^2 \\\\\n",
     "&=& \\left(\\frac{\\sum_{i=1}^n(x_i-\\bar{x})(y_i-\\bar{y})}{\\sqrt{\\sum_{i=1}^n(x_i-\\bar{x})^2}\\sqrt{\\sum_{i=1}^n(y_i-\\bar{y})^2}}\\right)^2\n",
     "\\end{eqnarray}\n",
     "\n",
@@ -207,18 +207,42 @@
     "\n",
     "$\\sigma$は母分散であり，これが不明な場合には不偏分散$s$を用いることも多い．標本の数を増やすことで，母平均の区間推定の精度が上げられる．中心極限定理により，十分に大きい標本数を用意すれば，標本平均は母平均に(ほぼ)等しくなる．\n",
     "\n",
-    "さて，ここまでが一般的な標準誤差の解釈であるが，回帰分析における標準誤差の活用はどのようなものだろうか．回帰分析においては「回帰モデルの推定値の標準誤差」「回帰係数の推定値の標準誤差」という2つの解釈が存在する．\n",
-    "\n",
-    "### 回帰モデルの推定値の標準誤差\n",
-    "### 回帰係数の推定値の標準偏差"
+    "さて，ここまでが一般的な標準誤差の解釈であるが，回帰分析における標準誤差の活用はどのようなものだろうか．回帰分析においては「回帰モデルの推定値の標準誤差」「回帰係数の推定値の標準誤差」という2つの解釈が存在する．"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "845732cc",
+   "id": "7b068dec",
    "metadata": {},
    "source": [
-    "### p値"
+    "### 回帰モデルの推定値の標準誤差\n",
+    "データ点が完全に直線状に並んでいない限りは，回帰モデルとデータ点との間に誤差が生じている．先に決定係数の説明で述べた残差変動のことである．こうした回帰モデルでは説明しきれない誤差がどれだけあるかを定量的に把握するため，残差変動の分散を求めることがある．これを残差分散と呼ぶ．つまり，\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "V[(残差変動)] = \\frac{1}{n-2}\\sum_{i=1}^{n}(y_i - \\hat{y}_i)^2\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "となる．除数が$n$ではなく$n-2$となっているのは，標本から推定される分散が過小評価されるためである．(単回帰モデルの自由度2を差し引いている)\n",
+    "\n",
+    "この分散の平方根をとれば，回帰モデルの推定値の標準誤差が導出される．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb57a2ae",
+   "metadata": {},
+   "source": [
+    "### 回帰係数の推定値の標準誤差\n",
+    "回帰モデルを作る際に，母集団全てのデータを用いることは困難な場合が多い．すなわち標本から先に述べた最小二乗法でパラメータを推定することになる．この場合，どうしても母集団から求められる回帰モデルから傾きの誤差が生じてしまう．\n",
+    "\n",
+    "母集団のデータすべてを用いた回帰直線の傾きからどれだけバラついているか，傾きの分散として，\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "V[\\alpha] &=& \\frac{(残差変動の分散)}{(xの偏差平方和)} \\\\\n",
+    "&=& \\frac{\\frac{1}{n-2}\\sum_{i=1}^{n}(y_i - \\hat{y}_i)^2}{\\sum_{i=1}^{n}(x_i - \\bar{x})^2}\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "が与えられる．これの平方根を取ることで，回帰係数の推定値の標準誤差を求めることができる．標準誤差の大小によって，構築した回帰モデルの良し悪しを検討できる．"
    ]
   },
   {
