(2022/02/16)適合率(Precision)，再現率(Recall)，F値(F1-score)，micro平均，macro平均を理解する

--- a/ConfusionMatrixAndOthers.ipynb
+++ b/ConfusionMatrixAndOthers.ipynb
@@ -603,24 +603,206 @@
   },
   {
    "cell_type": "markdown",
+   "id": "343fc963",
+   "metadata": {},
+   "source": [
+    "### 適合率(Precision; PRE)\n",
+    "適合率も二値分類モデルを評価するための指標の一つである．定義は以下のように与えられる．\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "PRE = \\frac{TP}{TP + FP}\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "この指標は，分類器が陽性判定したデータのうち実際に陽性であったデータの割合を示している．1に近いほど良いモデルだと通常は判断することができる．\n",
+    "\n",
+    "ただし，適合率が高いことが必ずしも分類器の性能の良さを表すわけではない場合がある．例えば極端な例として，ある分類器が最も自信のある陽性データ1つにのみ「陽性」という判定をした場合はどうだろうか．確かに適合率は1になるが，仮に他の陽性データがあれば，それらは全て見逃していることになる．\n",
+    "\n",
+    "適合率の算出には，scikit-learnに専用の関数が用意されている．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "28a297ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision of SVM model: 0.975609756097561\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SVMの適合率\n",
+    "from sklearn.metrics import precision_score\n",
+    "print('Precision of SVM model:', precision_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5c91119",
+   "metadata": {},
+   "source": [
+    "### 再現率(Recall; REC)\n",
+    "再現率も二値分類モデルを評価する指標の一つである．定義は以下のように与えられる．\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "REC = \\frac{TP}{P} = \\frac{TP}{TP + FN}\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "これは，陽性データのうち分類器が「陽性」だと検出できたデータの割合を示している．この値も1に近いほど，一般的には良い分類モデルだと言うことができる．\n",
+    "\n",
+    "ただし，こちらも適合率と同様に例外が存在する．極端な例として，すべてのデータを「陽性」だと判定する分類モデルを考える．$FN=0$であるから，再現率も1をとる．しかし，当然ながらこれは分類器として機能していない．\n",
+    "\n",
+    "再現率の算出には，scikit-learnに専用の関数が用意されている．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "205d1ea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall of SVM model: 0.9523809523809523\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SVMの再現率\n",
+    "from sklearn.metrics import recall_score\n",
+    "print('Recall of SVM model:', recall_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18fa7b10",
+   "metadata": {},
+   "source": [
+    "### F値(F1-score)\n",
+    "適合率と再現率を見ると，これら2つの指標はトレードオフの関係にあることが分かる．つまり，「少しでも陽性判定のミスをなくそう」として適合率を上げると，本来陽性であったはずのデータがいくつか見逃され，再現率が下がる．逆に，「陽性データの見逃しを防ごう」として再現率を上げると，陽性ではないデータまで陽性判定される確率が上がり，適合率が下がる．\n",
+    "\n",
+    "分類器の性能指標として，適合率・再現率の片方だけを重視するわけにはいかない．これを解決する指標の一つとして，F値が挙げられる．定義を以下に記す．\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "F1 = 2 \\times \\frac{PRE \\times REC}{PRE + REC}\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "これは適合率と再現率の調和平均をとった値になっていて，0から1までの値をとる．\n",
+    "\n",
+    "F値の算出には，scikit-learnに専用の関数が用意されている．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ef95c14f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 score of SVM model: 0.963855421686747\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SVMのF値\n",
+    "from sklearn.metrics import f1_score\n",
+    "print('F1 score of SVM model:', f1_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dde57c90",
+   "metadata": {},
+   "source": [
+    "## 多クラス分類モデルの評価指標\n",
+    "---\n",
+    "ここまで紹介してきた指標は，二値分類モデルの評価指標である．多クラス分類を行うモデルの評価指標として，本節ではmicro平均とmacro平均について述べる．\n",
+    "\n",
+    "説明に至る前提として，データセットはk個のクラスからなるとする．そして，それぞれのクラスに対する分類モデルの真陽性や偽陰性等の数を，下付きの添え字で表現する．例えば，i番目のクラスに対する真陽性データの数を$TP_i$と表す．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1437a7e",
+   "metadata": {},
+   "source": [
+    "### micro平均\n",
+    "micro平均は以下のように定義される．今回は適合率のmicro平均を例にとる．\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "PRE_{micro} = \\frac{TP_1+...+TP_k}{TP_1+...+TP_k+FP_1+...+FP_k}\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "kクラス全てを対象として，分類器が陽性判定したデータのうち実際に陽性であったデータの割合を示している．適合率を多クラスへ拡張したものだと捉えることができる．\n",
+    "\n",
+    "性質として，あるクラスのデータ数が極端に大きい場合には，そのデータを検出する性能が反映されやすい．クラスラベルが偏ったデータに対してmicro平均を参照する場合には注意が必要である．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57f78ef6",
+   "metadata": {},
+   "source": [
+    "### macro平均\n",
+    "macro平均は以下のように定義される．こちらも適合率を例にとる．\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "PRE_{macro} = \\frac{PRE_1 +...+ PRE_k}{k}\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "全てのクラスの適合率の算術平均をとった値になっている．micro平均とは異なり，すべてのクラスの適合率を平等に重みづけしている．\n",
+    "\n",
+    "性質として，こちらもクラスラベルが偏っている場合に，少ないクラスラベルの適合率が相対的に過大評価される可能性が挙げられる．めったに現れないクラスのデータに対して分類器の性能を向上しても，実用上の性能と乖離するリスクがある．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c39b313f",
+   "metadata": {},
+   "source": [
+    "### 重みつき平均\n",
+    "補足として，多クラス分類の場合には重みつき平均を用いることが多い．先述のmicro平均やmacro平均をそのまま用いるとクラスの不均衡に対応しきれないことから，あらかじめクラス数に応じた重み係数をかけ合わせることで補正するというものである．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6b40a432",
    "metadata": {},
    "source": [
-    "https://archive.ics.uci.edu/ml/datasets/breast+cancer+wisconsin+(diagnostic)\n",
+    "## 参考文献\n",
+    "---\n",
+    "S.Raschka, V.Mirjalili, [第三版]Python機械学習プログラミング，2020.\n",
     "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.LabelEncoder.html\n",
+    "[Breast Cancer Wisconsin (Diagnostic) Data Set，UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/datasets/breast+cancer+wisconsin+(diagnostic))\n",
     "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html\n",
+    "[sklearn.preprocessing.LabelEncoder，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.LabelEncoder.html)\n",
     "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html\n",
+    "[sklearn.model_selection.train_test_split，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html)\n",
     "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.make_pipeline.html\n",
+    "[sklearn.preprocessing.StandardScaler，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html)\n",
     "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html\n",
+    "[sklearn.pipeline.make_pipeline，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.pipeline.make_pipeline.html)\n",
     "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html\n",
+    "[sklearn.metrics.confusion_matrix，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.confusion_matrix.html)\n",
     "\n",
-    "https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.matshow.html"
+    "[sklearn.svm.SVC，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html)\n",
+    "\n",
+    "[sklearn.metrics.precision_score，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.precision_score.html)\n",
+    "\n",
+    "[sklearn.metrics.recall_score，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.recall_score.html)\n",
+    "\n",
+    "[sklearn.metrics.f1_score，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.f1_score.html)\n",
+    "\n",
+    "[matplotlib.pyplot.matshow，Matplotlib 3.5.1 documentation](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.matshow.html)"
    ]
   },
   {
