(2022/02/18)MAPE，RMSLEについて理解する

--- a/MSE，RMSE，MAE，MAPE，RMSLE.ipynb
+++ b/MSE，RMSE，MAE，MAPE，RMSLE.ipynb
@@ -448,7 +448,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "a9b28cd1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -477,6 +479,115 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7f11d72a",
+   "metadata": {},
+   "source": [
+    "## MAPE(Mean Absolute Percentage Error)\n",
+    "---\n",
+    "\n",
+    "MAPEはその名の通り，評価値として100分率を用いている．\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "MAPE = \\frac{100}{N}\\sum_{i=0}^{N} \\left| \\frac{y_i-\\hat{y}_i}{y_i} \\right|\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "絶対値の分母を見ると，元のデータの値で割っていることが分かるだろう．これにより，スケールに寄らない回帰モデルの評価が可能になっている．\n",
+    "\n",
+    "ただし注意点として，除数である$y_i$が0に近い値(もしくは0)の場合，適正に性能が評価されない可能性がある点が挙げられる．\n",
+    "\n",
+    "また，データ点の数$N$で割っていることからMAPEは100%を最大として0%に近いほど良いモデルだと解釈するかもしれない．しかし，この指標の値の上限は100%ではないということにも注意が必要である．極端な例として，予測値$\\hat{y}_i$が十分に大きい(or小さい)値をとっている場合には，MAPEも十分に大きい値をとりうる．\n",
+    "\n",
+    "MAPEの実装は，scikit-learnに用意されている．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "726752cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAPE(train): 0.1671462468964239\n",
+      "MAPE(test): 0.16207536032281392\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MAPEの算出\n",
+    "from sklearn.metrics import mean_absolute_percentage_error\n",
+    "\n",
+    "print('MAPE(train):', mean_absolute_percentage_error(y_train, y_pred_train))\n",
+    "print('MAPE(test):', mean_absolute_percentage_error(y_test, y_pred_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c333fd9",
+   "metadata": {},
+   "source": [
+    "## RMSLE(Root Mean Squared Logarithmic Error)\n",
+    "---\n",
+    "\n",
+    "RMSLEはデータ点と予測値との比について，対数をとって評価する指標である．\n",
+    "\n",
+    "\\begin{eqnarray}\n",
+    "RMSLE &=& \\sqrt{\\frac{1}{N}\\sum_{i=0}^{N}\\left(\\log\\frac{1+y_i}{1+\\hat{y}_i}\\right)^2} \\\\\n",
+    "&=& \\sqrt{\\frac{1}{N}\\sum_{i=0}^{N}\\left[\\log(1+y_i) - \\log(1+\\hat{y}_i)\\right]^2}\n",
+    "\\end{eqnarray}\n",
+    "\n",
+    "平方根を取らなければ，MSLE(Mean Squared Logarithmic Error)という指標になる．また対数内で1を加えているのは，真数が0になることを防ぐためである．\n",
+    "\n",
+    "RMSLEの特徴として，残差が大きい場合であっても，あまり値が発散しないということが挙げられる．これは対数をとっていることの恩恵だと言える．\n",
+    "\n",
+    "RMSLEの実装もscikit-learnにある．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8aff710b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Mean Squared Logarithmic Error cannot be used when targets contain negative values.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_565/141356078.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmean_squared_log_error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'RMSLE(train):'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmean_squared_log_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msquared\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'RMSLE(test):'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmean_squared_log_error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msquared\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/PROJECTS/DataScienceSkillApprentice/venv/lib/python3.8/site-packages/sklearn/metrics/_regression.py\u001b[0m in \u001b[0;36mmean_squared_log_error\u001b[0;34m(y_true, y_pred, sample_weight, multioutput, squared)\u001b[0m\n\u001b[1;32m    519\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    520\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 521\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m    522\u001b[0m             \u001b[0;34m\"Mean Squared Logarithmic Error cannot be used when \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    523\u001b[0m             \u001b[0;34m\"targets contain negative values.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Mean Squared Logarithmic Error cannot be used when targets contain negative values."
+     ]
+    }
+   ],
+   "source": [
+    "# RMSLEの算出(squared=Falseで平方根を取ってくれる)\n",
+    "from sklearn.metrics import mean_squared_log_error\n",
+    "\n",
+    "print('RMSLE(train):', mean_squared_log_error(y_train, y_pred_train, squared=False))\n",
+    "print('RMSLE(test):', mean_squared_log_error(y_test, y_pred_test, squared=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df32d67c",
+   "metadata": {},
+   "source": [
+    "↑勉強になるエラーが吐かれた．\n",
+    "\n",
+    "> ValueError: Mean Squared Logarithmic Error cannot be used when targets contain negative values.\n",
+    "\n",
+    "つまり目的変数ないしは予測値に負の値が含まれていると，MSLEは定義できないということだ．対数内に1を加えている理由がより明確になったといえよう(データセットは住宅価格の中央値なので，あるとすれば予測値が負)．\n",
+    "\n",
+    "目的変数のスケールが非常に大きいデータセットで用いるのが適当なのかもしれない．"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ce6a0bd0",
    "metadata": {},
    "source": [
@@ -491,7 +602,17 @@
     "\n",
     "[sklearn.metrics.mean_squared_error，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_error.html)\n",
     "\n",
-    "[sklearn.metrics.mean_absolute_error，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_absolute_error.html)"
+    "[sklearn.metrics.mean_absolute_error，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_absolute_error.html)\n",
+    "\n",
+    "[［評価関数］平均絶対パーセント誤差（MAPE：Mean Absolute Percentage Error）とは？，itmedia](https://atmarkit.itmedia.co.jp/ait/articles/2106/09/news028.html)\n",
+    "\n",
+    "[Mean absolute percentage error，Wikipedia](https://en.wikipedia.org/wiki/Mean_absolute_percentage_error)\n",
+    "\n",
+    "[sklearn.metrics.mean_absolute_percentage_error，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_absolute_percentage_error.html)\n",
+    "\n",
+    "[［損失関数／評価関数］平均二乗対数誤差（MSLE：Mean Squared Logarithmic Error）／RMSLE（MSLEの平方根）とは？，itmedia](https://atmarkit.itmedia.co.jp/ait/articles/2106/02/news021.html)\n",
+    "\n",
+    "[sklearn.metrics.mean_squared_log_error，scikit-learn 1.0.2 documentation](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.mean_squared_log_error.html)"
    ]
   }
  ],
